--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
   --white: #ffffff;
   --grey: #99AAB5;
   --lightdark: #2C2F33;
+  --lighterdark: #7A7878;
   --dark: #23272A;
   --reallydark: #000000;
 }
