--- a/client/src/components/create/create.css
+++ b/client/src/components/create/create.css
@@ -3,5 +3,10 @@
     width: 100%;
     height: 100vh;
     justify-content: center;
+    color: var(--white);
     text-align: center;
+}
+
+.create__imageUploader {
+    background-color: transparent;
 }
