started on create page, switched to font awesome

--- a/client/src/components/shared/navbar/navbar.css
+++ b/client/src/components/shared/navbar/navbar.css
@@ -32,7 +32,9 @@
 }
 
 .navbar__icon {
-    margin-right: 8px;
+    margin-right: 20px;
+    color: white;
+    font-size: 18px;
 }
 
 .navbar__dropdownContent {
