--- a/client/src/components/scenes/HomeScene/home/home.css
+++ b/client/src/components/scenes/HomeScene/home/home.css
@@ -5,3 +5,19 @@
     justify-content: center;
     text-align: center;
 }
+
+.home__resetBtn {
+    background-color: transparent;
+    color: #dc322f;
+    position: absolute;
+    top: 122px;
+    left: 32%;
+    font-size: 12px;
+    border: none;
+    z-index: 100;
+}
+
+.home__resetBtn:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
